[gd_scene format=3 uid="uid://dm6f7gyox8uyv"]

[ext_resource type="Script" path="res://scripts/ui/GameOverScreen.gd" id="1"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(360, 200)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Spacer" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="ResultLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Victory!"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 36

[node name="WavesLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Waves Survived: 10 / 10"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="SpacerBottom" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="PlayAgainButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(180, 44)
size_flags_horizontal = 4
text = "Play Again"
